# DS-OCR2-3090-Runner

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: android-client.md  database.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/dsocr/ds_ocr_mobile/: MainActivity.kt
mobile/lib/: main.dart
mobile/lib/src/: app.dart
mobile/lib/src/api/: ocr_api.dart
mobile/lib/src/features/: ocr_home_page.dart
mobile/lib/src/models/: ocr_models.dart
mobile/lib/src/settings/: settings_store.dart
mobile/test/: ocr_api_integration_test.dart  widget_test.dart
scripts/: prefetch_models.py  run_deepseek_ocr2.py
sql/: schema.sql
src/ds_ocr_runner/: __init__.py  api.py  config.py  db.py  main.py  manage.py  models.py  ocr_backend.py  schemas.py  services.py  storage.py  worker.py
